src/main.css
/* ... */
#seedSkipper { font-size: 11px; text-align: center; line-height: 14px;}
.skipMessage { margin-top: 8px; }

#generate #mousemovelimit { font-size: 16px; color: #FFF; }
#rightArea { position: absolute; right: 66px; top: 62px; width: 170px; }
#progress-bar { width: 170px; background:#80CF80; position: relative; margin-bottom: 20px;
	-webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px;
 }
#progress-bar-percentage { background:#FFA247; padding: 3px 0px; text-align: center; height: 18px;
	-webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px;
 }
#progress-bar-percentage span { display: inline-block; position: absolute; width: 100%; left: 0; }
.nicerButton { font-size: 14px; }

#generate { font-size: 13px; text-align: left; position: relative; padding: 20px; border: 1px solid #BFBFBF; background-color: white; -webkit-border-radius: 10px; -moz-border-radius: 10px; border-radius: 10px; }
#generate span { padding: 5px 5px 0 5px; }
#generatekeyinput { position: relative; z-index: 20; }

#generatelabelbitcoinaddress, #generatelabelmovemouse, #generatelabelkeypress { font-size: 14px; font-family: monospace; }
#mousemovelimit { font-size: 16px; font-family: monospace; }
.frontPageText { position: relative; }

h1 { margin: 0px; height: 91px; }

#keyarea { height: 250px; border-bottom: 1px solid #bfbfbf; }
#keyarea .pubaddress { float: none; display: block; padding: 0; height: auto; }
#keyarea .label { text-decoration: none; }
#keyarea .privwif { float: none; text-align: right; position: relative; padding: 0; }
#keyarea .qrcode_public { float: none; display: block; padding: 13px 11px 11px 11px; }
#keyarea .qrcode_private { float: none; display: block; top: 0; text-align: right; padding: 13px 11px 11px 11px; }
#keyarea .private { width: 30%; display: table-cell; }
#keyarea .public { width: 30%; display: table-cell; }
#singlearea { font-size: 90%; display: block; }
#singlesecret { position: relative; top: -130px; float: right; right: 200px; color: red; font-weight: bolder; font-size: 200%;  }
#singleshare { position: relative; top: -110px; float: left; left: 160px; color: green; font-weight: bolder; font-size: 200%;  }
#singlesafety { text-align: left; border-bottom: 1px solid #bfbfbf; position: relative; min-height: 500px; }

#singlesafety p { font-size: 13px; }

.firstHalfSingleSafety, .secondHalfSingleSafety {
	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
	box-sizing: border-box;         /* Opera/IE 8+ */
	display: inline-block;
    vertical-align: top;
    position: relative;
}

.firstHalfSingleSafety { width: 50%; padding: 10px 30px 10px 30px; }

 .secondHalfSingleSafety {
    position: absolute;
    top: 0px;
    right: 0px;
    width: 50%;
    padding: 20px;
    text-align: center;
 }

.frontPageImage, .seedFrontPageImage {
	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
	border-radius: 10px;
}
.frontPageImage { width: 100%; }
.seedFrontPageImage { max-height: 340px; }

.currencyNameColumn { min-width: 120px; }

.securityChecklist {
	background-color: #FFE6C9;
	margin-top: 15px;
    padding: 20px;
    -webkit-border-radius: 10px;
	-moz-border-radius: 10px;
	border-radius: 10px;
	text-align: left;
}

.supportedCurrenciesChecklist {
	background-color: #C2F2C3;
	margin-top: 10px;
	margin-bottom: 10px;
    padding: 20px;
    -webkit-border-radius: 10px;
	-moz-border-radius: 10px;
	border-radius: 10px;
	text-align: left;
}

.supportedCurrenciesChecklist ul {
	list-style-type: none;
	padding-left: 14px;
}

#supportedcurrencies {
	line-height: 20px;
    padding: 12px 12px 0;
}

.frontPageInstructions {
	padding: 5px;
}

.securityChecklist ul { padding: 5px 0 0 20px; }
.securityChecklist li { padding-left: 5px; margin-bottom: 10px; }

.redText { color: red; }
.greenText { color: green; }

#coinLogo { width: 55px; height: 55px; padding: 10px; position: absolute; top: 2px; left: 10px; }
#coinLogoImg { width: 100%; height: 100%; }

.coinIcoin { width: 64px; height: 64px; padding: 10px; position: absolute; top: 272px; left: 48px; }
#coinImg { width: 100%; height: 100%; }

#main { position: relative; text-align: center; margin: 0px auto; width: 1005px; }
#logo { width: 578px; height: 80px; }

.backLogo { float: right; width: 50px; height: 50px; }

#paperarea { min-height: 120px; display: none; }
#paperarea .keyarea { border: 1px solid #BFBFBF; border-top: 0; }
#paperarea .keyarea.art { display: block; height: auto; border: 0; font-family: Ubuntu, Arial; padding: 0; margin: 0; }
#paperarea .artwallet .papersvg { width: 1004px; height: 426px; border: 0; margin: 0; padding: 0; left: 0; }
#paperarea .artwallet .qrcode_public { top: 263px; left: 780px; z-index: 100; margin: 0; float: none; display: block; position: absolute; background-color: #FFFFFF;
		                                padding: 5px 5px 2px 5px; }
#paperarea .artwallet .qrcode_private { top: 37px; right: 446px; z-index: 100; margin: 0; float: none; display: block; position: absolute; background-color: #FFFFFF;
		                                padding: 5px 5px 2px 5px;
	                                	-ms-transform: rotate(180deg); /* IE 9 */
										-webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
										transform: rotate(180deg);
		                                 }
.supportWalletGenerator { margin: 30px; }
.errorMsg { color: red; text-align: center !important; width: 100% !important; padding-top: 15px !important; }
#paperarea .artwallet .btcaddress
{
	position: absolute; bottom: 88px; left: 874px; z-index: 100; font-size: 11px; background-color: transparent;
	font-weight: 100; color: #000000; margin: 0; width: 124px; height: 32px; text-align: center;
    word-wrap: break-word; font-family: Courier, monospace;
    -ms-transform: rotate(-90deg); /* IE 9 */
	-webkit-transform: rotate(-90deg); /* Chrome, Safari, Opera */
	transform: rotate(-90deg); font-family: Courier, monospace;
}
/* ... */

